<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yahboomcar_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nx-ros2@todo.todo">nx-ros2</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lidar_pointcloud_filter</exec_depend>
  <exec_depend>lidar_tg30</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>yahboomcar_imu</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
